        Like data_alpha for alpha, data_color sets the colour for the geom 
        (or now geoms) used to plot the data in the background. 
        
    o   Both data_color and data_alpha can now be set to NULL, in which case 
        they will not be set but should be set by the user through data_arg.
        
    Bugfixes
    
    o  Data in mixed() output is shown nicer (#113)

    

                    *************************
                    ** afex VERSION 1.1-x **
                    *************************
                    
                    Changes in afex Version 1.1-x
                    Released March 2022
                    
    Significant User Visible Changes and New Features
    
    o   Fitting messages for mixed() are now only shown per default in 
        interactive mode, thanks to Marius Barth (#111).
    
    o   Nicer error message about missing variables for ANOVAs.
    
    o   Removed check_contrasts() argument for ANOVAs, which did not work as 
        described for designs with repeated-measures factors: 
        https://github.com/singmann/afex/issues/109
        
    
    Bugfixes
    
    o   Fixed overzealous data completeness check introduced in version 1.0 in 
        aov_car() which prevented ANOVAs with additive factors and no cross over
        data from working.
        
    o   mixed(..., method = "LRT") and similar nested methdos should work with
        empty factor levels: https://github.com/singmann/afex/issues/96



                    *************************
                    ** afex VERSION 1.0-x **
                    *************************
                    
                    Changes in afex Version 1.0-x
                    Released July 2021
                    
    Significant User Visible Changes and New Features
    
    o   ANOVA objects do not by default contain the aov slot any more
    
    o   emmeans() for ANOVA now uses multivariate model as default
    